--- a/po/nl.po
+++ b/po/nl.po
@@ -6,13 +6,80 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: DrWright 0.13\n"
-"POT-Creation-Date: 2003-04-17 18:56+0200\n"
+"POT-Creation-Date: 2003-05-19 23:49+0200\n"
 "PO-Revision-Date: 2002-11-22 17:08+0100\n"
 "Last-Translator: Luc Roobrouck <luc.roobrouck@pandora.be>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: data/glade/drw-preferences.glade.h:1
+msgid "*"
+msgstr ""
+
+#: data/glade/drw-preferences.glade.h:2
+msgid "<b>W_arning time:</b>"
+msgstr "<b>W_aarschuw tijd:</b>"
+
+#: data/glade/drw-preferences.glade.h:3
+msgid "<b>Warning _method:</b>"
+msgstr "<b>Waarschuw _methode:</b>"
+
+#: data/glade/drw-preferences.glade.h:4
+msgid "<b>_Break interval:</b>"
+msgstr "<b>_Pauze interval:</b>"
+
+#: data/glade/drw-preferences.glade.h:5
+#, fuzzy
+msgid "<b>_Unlocking:</b>"
+msgstr "<b>W_aarschuw tijd:</b>"
+
+#: data/glade/drw-preferences.glade.h:6
+msgid "<b>_Work interval:</b>"
+msgstr "<b>_Werk interval:</b>"
+
+#: data/glade/drw-preferences.glade.h:7
+#, fuzzy
+msgid ""
+"<span size=\"small\">Duration of the break when typing is disallowed.</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur van de pauze tijdens dewelke typen niet "
+"mogelijk is.\n"
+"</span>"
+
+#: data/glade/drw-preferences.glade.h:8
+msgid ""
+"<span size=\"small\">Duration of warning before starting a break.\n"
+"</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur van de waarschuwing voorafgaande aan een "
+"pauze.\n"
+"</span>"
+
+#: data/glade/drw-preferences.glade.h:10
+msgid ""
+"<span size=\"small\">Duration of work before forcing a break.\n"
+"</span>"
+msgstr ""
+"<span size=\"small\">Tijdsduur om te werken vooraleer te pauzeren.\n"
+"</span>"
+
+#: data/glade/drw-preferences.glade.h:12
+msgid "Allow unlocking, using the phrase:"
+msgstr ""
+
+#: data/glade/drw-preferences.glade.h:13
+msgid "Display warning window "
+msgstr "Toon waarschuw venster "
+
+#: data/glade/drw-preferences.glade.h:14
+msgid "DrWright Preferences"
+msgstr "DrWright Instellingen"
+
+#: data/glade/drw-preferences.glade.h:15
+msgid "minutes"
+msgstr "minuten"
 
 #: src/main.c:128
 msgid "DrWright is already running."
@@ -76,89 +143,23 @@ msgstr "Vergeet niet om regelmatig te pauzeren."
 msgid "About DrWright"
 msgstr "Over DrWright"
 
-#: src/drwright.c:712
+#: src/drwright.c:711
 msgid "A computer break reminder."
 msgstr "Een programma dat je eraan herinnert regelmatig een pauze te nemen."
 
-#: src/drwright.c:714
-msgid "Written by Richard Hult &lt;richard@imendo.com&gt;"
+#: src/drwright.c:712
+#, fuzzy
+msgid "Written by Richard Hult &lt;rhult@imendo.com&gt;"
 msgstr "Geschreven door Richard Hult &lt;richard@imendo.com&gt;"
 
-#: src/drwright.c:715
+#: src/drwright.c:713
 msgid "Eye candy added by Anders Carlsson"
 msgstr "\"Eye candy\" toegevoegd door Anders Carlsson"
 
-#: src/drwright.c:828
+#: src/drwright.c:826
 #, fuzzy
 msgid "Break reminder"
 msgstr "Een programma dat je eraan herinnert regelmatig een pauze te nemen."
-
-#: src/drw-preferences.glade.h:1
-msgid "*"
-msgstr ""
-
-#: src/drw-preferences.glade.h:2
-msgid "<b>W_arning time:</b>"
-msgstr "<b>W_aarschuw tijd:</b>"
-
-#: src/drw-preferences.glade.h:3
-msgid "<b>Warning _method:</b>"
-msgstr "<b>Waarschuw _methode:</b>"
-
-#: src/drw-preferences.glade.h:4
-msgid "<b>_Break interval:</b>"
-msgstr "<b>_Pauze interval:</b>"
-
-#: src/drw-preferences.glade.h:5
-#, fuzzy
-msgid "<b>_Unlocking:</b>"
-msgstr "<b>W_aarschuw tijd:</b>"
-
-#: src/drw-preferences.glade.h:6
-msgid "<b>_Work interval:</b>"
-msgstr "<b>_Werk interval:</b>"
-
-#: src/drw-preferences.glade.h:7
-#, fuzzy
-msgid ""
-"<span size=\"small\">Duration of the break when typing is disallowed.</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur van de pauze tijdens dewelke typen niet "
-"mogelijk is.\n"
-"</span>"
-
-#: src/drw-preferences.glade.h:8
-msgid ""
-"<span size=\"small\">Duration of warning before starting a break.\n"
-"</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur van de waarschuwing voorafgaande aan een "
-"pauze.\n"
-"</span>"
-
-#: src/drw-preferences.glade.h:10
-msgid ""
-"<span size=\"small\">Duration of work before forcing a break.\n"
-"</span>"
-msgstr ""
-"<span size=\"small\">Tijdsduur om te werken vooraleer te pauzeren.\n"
-"</span>"
-
-#: src/drw-preferences.glade.h:12
-msgid "Allow unlocking, using the phrase:"
-msgstr ""
-
-#: src/drw-preferences.glade.h:13
-msgid "Display warning window "
-msgstr "Toon waarschuw venster "
-
-#: src/drw-preferences.glade.h:14
-msgid "DrWright Preferences"
-msgstr "DrWright Instellingen"
-
-#: src/drw-preferences.glade.h:15
-msgid "minutes"
-msgstr "minuten"
 
 #: src/drw-break-window.c:240
 msgid "Unlock"
